[package]
name = "k256_rs"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "k256_rs"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.29.1", features = ["nif_version_2_16"] }
k256 = "0.11.6"
rand_core = { version = "0.6.4", features = ["getrandom"] }
